fix: add z-index to sidenav for improved layering when overlay is visible.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -66,6 +66,7 @@ mat-sidenav-content {
 
 .sidenav {
   width: 250px;
+  z-index: 1 !important;
 }
 
 .active-link {
